# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.87 2008-02-23 00:42:41 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --
2.2.6 (2008/??/??)
 - (2008/02/23) Fixed bug# 2696 - CustomerPanelOwnSelection and
    CustomerGroupSupport does not work together (show also queues without
    create permissions).
 - (2008/02/23) Fixed bug# 2544 - Customer with RO can update ticket in
    customer panel (wrong SysConfig setting).
 - (2008/02/22) Fixed bug# 2650 - Mails not full imported by PostmasterPOP3.pl
    (mail body is cutted off, if no content type is availabe but 8bit chars are
    used).
 - (2008/02/22) Fixed bug# 2462 - Permission denied when trying to print ticket
    details from customer panel (customer.pl).
 - (2008/02/21) Added sendmail dummy backend module to deactivate sending
    emails, useful for test system (Kernel::System::Email::DoNotSendEmail).
 - (2008/02/20) Fixed bug# 2644 - Added unit tests to find easier wrong
    configured GD-CPAN modules.
 - (2008/02/20) Fixed bug# 2706 - SysConfig setting LogSystemCacheSize causes
    error messages.
 - (2008/02/19) Fixed bug# 2450 - Auto-conversion of URLs to links fail when
    a ')' is encountered.
 - (2008/02/18) Fixed bug# 2541 - Missing "Ticket unlock" link for ticket the
    actions 'Phone call', 'Merge', 'Move' and 'Forward'.
 - (2008/02/18) Fixed bug# 2145 - $Config{"TicketFreeTimeKey22"} instant of
    $Config{"TicketFreeTimeKey2"} in AgentTicketSearchResultShort.dtl.
 - (2008/02/18) Fixed bug# 2674 - Spellchecker always reports 0 errors
    even SpellCheckerBin is not configured correctly.
 - (2008/02/17) Improved bin/otrs.checkModules tool for checking required
    CPAN modules.
 - (2008/02/17) Fixed bug# 2255 - SysConfig setting Ticket ->