@@ -2,7 +2,7 @@
 # Kernel/System/Ticket/Article.pm - global article module for OTRS kernel
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: Article.pm,v 1.147.2.1 2008-02-12 17:58:52 martin Exp $
+# $Id: Article.pm,v 1.147.2.2 2008-02-23 01:59:28 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -18,7 +18,7 @@ use Mail::Internet;
 use Kernel::System::StdAttachment;
 
 use vars qw($VERSION);
-$VERSION = '$Revision: 1.147.2.1 $';
+$VERSION = '$Revision: 1.147.2.2 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 =head1 NAME
@@ -1277,8 +1277,8 @@ sub ArticleGet {
         $Ticket{CustomerID} = $Row[16];
         $Data{OwnerID} = $Row[20];
         $Ticket{OwnerID} = $Row[20];
-        $Data{ResponsibleID} = $Row[21];
-        $Ticket{ResponsibleID} = $Row[21];
+        $Data{ResponsibleID} = $Row[21] || 1;
+        $Ticket{ResponsibleID} = $Row[21] || 1;
         $Data{ArticleTypeID} = $Row[22];
         $Data{ArticleFreeKey1} = $Row[23];
         $Data{ArticleFreeText1} = $Row[24];
@@ -1344,7 +1344,7 @@ sub ArticleGet {
     # get owner
     $Ticket{Owner} = $Self->{UserObject}->UserLookup(UserID => $Ticket{OwnerID});
     # get responsible
-    $Ticket{Responsible} = $Self->{UserObject}->UserLookup(UserID => $Ticket{ResponsibleID} || 1);
+    $Ticket{Responsible} = $Self->{UserObject}->UserLookup(UserID => $Ticket{ResponsibleID} );
     # get priority
     $Ticket{Priority} = $Self->{PriorityObject}->PriorityLookup(PriorityID => $Ticket{PriorityID});
     # get lock
