@@ -2,13 +2,15 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.87 2008-02-23 00:42:41 martin Exp $
+# $Id: CHANGES,v 1.465.2.88 2008-02-23 01:59:28 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 2.2.6 (2008/??/??)
+ - (2008/02/23) Fixed bug# 2275 - Need User or UserID! by using UnlockTickets.pl
+    and PendingJobs.pl.
  - (2008/02/23) Fixed bug# 2696 - CustomerPanelOwnSelection and
     CustomerGroupSupport does not work together (show also queues without
     create permissions).
